# mytest

./: .gitignore  .gitmodules  CC2GLTF.md  CMakeLists.txt  FileFormat.md  README.md  build.bat  build.sh  build_boost.bat  build_boost.sh
.github/workflows/: main.yml
3rd/src/socket.io-client-cpp/src/internal/: sio_client_impl.h
3rd/src/socket.io-ext/internal/: sio_client_impl.h
3rd/src/tinyxml2/: tinyxml2.h
3rd/x64-osx/debug/lib/pkgconfig/: libcrypto.pc
3rd/x64-osx/lib/pkgconfig/: libcrypto.pc
3rd/x64-win/debug/lib/: boost_atomic-vc140-mt-gd.lib  boost_chrono-vc140-mt-gd.lib  boost_container-vc140-mt-gd.lib  boost_context-vc140-mt-gd.lib  boost_coroutine-vc140-mt-gd.lib  boost_date_time-vc140-mt-gd.lib  boost_exception-vc140-mt-gd.lib  boost_system-vc140-mt-gd.lib  lexers.lib  libssl.lib  math.lib  simd.lib  tasking.lib  tbbmalloc_debug.lib  tbbmalloc_proxy_debug.lib
3rd/x64-win/lib/: boost_atomic-vc140-mt.lib  boost_chrono-vc140-mt.lib  boost_container-vc140-mt.lib  boost_context-vc140-mt.lib  boost_coroutine-vc140-mt.lib  boost_date_time-vc140-mt.lib  boost_exception-vc140-mt.lib  boost_system-vc140-mt.lib  boost_thread-vc140-mt.lib  lexers.lib  libssl.lib  math.lib  simd.lib  tasking.lib  tbb.lib  tbbmalloc.lib  tbbmalloc_proxy.lib
CI/: build.sh
cc2ext/: SaveObj.cpp  SaveObj.h
client/: main.ts  package-lock.json  package.json  tsconfig.json
client/lib/: LFX_Baker.ts  LFX_Types.ts
editor/: LFX_App.ts  LFX_Baker.ts  LFX_Types.ts
ext/: CMakeLists.txt
hm2terrain/: exrloader.h  main.cpp
include/: LFX_Aabb.h  LFX_Baker.h  LFX_Color.h  LFX_EmbreeScene.h  LFX_Entity.h  LFX_Geom.h  LFX_ILBakerMath.h  LFX_ILBakerRandom.h  LFX_ILBakerRaytrace.h  LFX_ILBakerSamples.h  LFX_ILBakerSampling.h  LFX_Image.h  LFX_Light.h  LFX_Log.h  LFX_Mat3.h  LFX_Math.h  LFX_Mesh.h  LFX_Rasterizer.h  LFX_RasterizerSoft.h  LFX_RasterizerZSpan.h  LFX_Scene.h  LFX_Stream.h  LFX_Terrain.h  LFX_Texture.h  LFX_TextureAtlas.h  LFX_Thread.h  LFX_Types.h  LFX_Vec2.inl  LFX_Vec3.h  LFX_Vec4.h  LFX_World.h  lodepng.h
source/: LFX_AOBaker.cpp  LFX_AOBaker.h  LFX_BSP.h  LFX_Baker.cpp  LFX_Baker.h  LFX_Camera.h  LFX_CyclesRenderer.cpp  LFX_CyclesRenderer.h  LFX_DeviceStats.cpp  LFX_DeviceStats.h  LFX_EmbreeScene.cpp  LFX_Entity.h  LFX_Enviroment.cpp  LFX_Enviroment.h  LFX_File.h  LFX_GLTFExp.cpp  LFX_GLTFExp.h  LFX_Geom.h  LFX_ILBaker.h  LFX_ILBakerMath.h  LFX_ILBakerRaytrace.cpp  LFX_ILBakerRaytrace.h  LFX_ILBakerSampling.h  LFX_ILPathTrace.cpp  LFX_ILPathTrace.h  LFX_Image.h  LFX_ImageBMP.cpp  LFX_ImageJPG.cpp  LFX_ImagePNG.cpp  LFX_ImageTGA.cpp  LFX_Light.cpp  LFX_Light.h  LFX_Log.cpp  LFX_Math.h  LFX_Mesh.cpp  LFX_Mesh.h  LFX_Rasterizer.cpp  LFX_Rasterizer.h  LFX_RasterizerScan2.cpp  LFX_RasterizerScan2.h  (+34 more)
src/: LFX_AOBaker.cpp  LFX_Baker.cpp  LFX_EmbreeScene.cpp  LFX_Entity.cpp  LFX_File.cpp  LFX_ILBakerRandom.cpp  LFX_ILBakerRaytrace.cpp  LFX_ILBakerSamples.cpp  LFX_ImageBMP.cpp  LFX_ImagePNG.cpp  LFX_Light.cpp  LFX_Log.cpp  LFX_Mesh.cpp  LFX_Rasterizer.cpp  LFX_RasterizerSoft.cpp  LFX_RasterizerZSpan.cpp  LFX_Scene.cpp  LFX_Stream.cpp  LFX_Terrain.cpp  LFX_TextureAtlas.cpp  LFX_Thread.cpp  LFX_Types.cpp  LFX_World.cpp  lodepng.cpp  main.cpp  main2.cpp  main3.cpp
uvunwrap/: main.cpp  uvunwarp.cpp  uvunwarp.h  vec2.h  vec3.h  vec3.inl  vec4.h  vec4.inl  xaunwrap.cpp  xaunwrap.h
